# thefuck

./: .gitignore  flake.nix  pyproject.toml
tests/: test_learned.py
tests/entrypoints/: test_fix_command_learned.py
thefuck/: learned.py  types.py
thefuck/entrypoints/: fix_command.py
thefuck/output_readers/: rerun.py
