[project]
name = "thefuck"
version = "3.32"
description = "Magnificent app which corrects your previous console command"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
  "psutil",
  "colorama",
  "six",
  "decorator",
  "pyte",
]

[project.scripts]
thefuck = "thefuck.entrypoints.main:main"
fuck = "thefuck.entrypoints.not_configured:main"

[build-system]
requires = ["setuptools<71", "fastentrypoints"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "flake8",
  "pytest<9",
  "mock",
  "pytest-mock",
  "pexpect",
  "pytest-benchmark",
  "fastentrypoints>=0.12",
  "setuptools<71",
]
